<resources>
    <string name="app_name">Audionce</string>
    <string name="username">Username</string>
    <string name="pw">Password</string>
    <string name="cpw">Confirm Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Audionce</string>
    <string name="title_activity_signup">Audionce</string>
    <string name="title_activity_hub">Audionce</string>
    <string name="title_activity_profile_main">Profile</string>
    <string name="friends">Friends</string>
    <string name="add_sound">Add Sound</string>
    <string name="logout">Logout</string>
    <string name="no_account">Don\'t have an account? Sign up.</string>
    <string name="already_account">Already have an account? Log in.</string>
    <string name="no_sounds">No Sounds To Display</string>
    <string name="remove">(remove)</string>
    <string name="title_activity_new_sound">New Sound</string>
    <string name="edit_title">Edit Name</string>
    <string name="edit_name_hint">Enter new name</string>
    <string name="search_title">Search</string>
    <string name="title_activity_view_friends_activity_three">Friends</string>
    <string name="add_friend">(add)</string>
    <string name="search_hint">Find Friends...</string>
    <string name="new_sound_name_hint">title</string>
    <string name="pub">public</string>
    <string name="priv">private</string>
    <string name="title_activity_view_pending_friends">Pending Requests</string>
    <string name="pending">Pending</string>
    <string name="no_results">No results found.</string>
    <string name="title_activity_audionce_splash">AudionceSplash</string>
    <string name="general_prefs">General</string>
    <string name="copyright">Copyright &#169; 2015 Alicia Iott. All rights reserved.</string>
    <string name="enable_location_text">
        Audionce needs to access you location in order to work properly. If you choose to enable
        your location, you will be taken to your default location settings, and will have to
        navigate back to this app.
    </string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="new_sound_title_hint">Title</string>
    <string name="save_picture">Save</string>
    <string name="capture_photo">Capture</string>
    <string name="title_activity_about">About</string>
    <string name="about_text_01">
        Audionce is an app about the world around you; the idea is simple:\nYou go to a place,
        and drop a sound. Then, someone else comes along and hears what you said. If you want,
        you can also leave private sounds that only your friends will be able to hear.\nFinally,
        when someone else comes along and drops a sound close to yours, your sound is deleted, lost
        forever, drowned out by the noise of the city. It\'s nothing personal, I\'m sure. It\'s just
        the way the world works.\n\nAudionce is the brain child of artist and developer Alicia Iott.
        This app was built with the help of \\newline software.
    </string>
    <string name="abt_icons">About The Icons</string>
    <string name="title_activity_friends">Friends</string>
</resources>
