<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ai.com.audionce.ViewFriendsActivityThree">

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/log_out"
        android:title="@string/logout"/>

    <item android:id="@+id/action_goto_pending"
        android:title="@string/pending"
        android:icon="@drawable/ic_action_add_friend"
        app:showAsAction="always" />

    <item
        android:id="@+id/goto_map"
        android:title="@string/app_name"
        android:icon="@drawable/ic_action_map"
        app:showAsAction="always" />

    <item
        android:id="@+id/goto_profile"
        android:title=""
        android:icon="@drawable/ic_action_view_profile"
        app:showAsAction="always" />

    <item
        android:id="@+id/new_sound_from_hub"
        android:title=""
        android:icon="@drawable/ic_action_plus_sign"
        app:showAsAction="always" />
</menu>
