<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ai.com.audionce.ProfileMain">

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/log_out"
        android:title="@string/logout"
        app:showAsAction="never"/>

    <item android:id="@+id/goto_map"
        android:title="@string/app_name"
        android:icon="@android:drawable/ic_menu_mapmode"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/new_sound_from_hub"
        android:title=""
        android:icon="@android:drawable/ic_menu_add"
        app:showAsAction="ifRoom"/>
</menu>
