<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ai.com.audionce.NewSoundActivity">

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/goto_map"
        android:title="@string/app_name"
        android:icon="@drawable/ic_action_map"
        app:showAsAction="always" />

    <item
        android:id="@+id/goto_friends"
        android:icon="@drawable/ic_action_view_friends"
        app:showAsAction="always"
        android:title="" />

    <item
        android:id="@+id/goto_profile"
        android:icon="@drawable/ic_action_view_profile"
        app:showAsAction="always"
        android:title="" />

    <item android:id="@+id/log_out"
        android:title="@string/logout"/>
</menu>
