<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ai.com.audionce.ProfileMain"
    android:background="@color/white">

    <ImageView
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:id="@+id/profile_picture_main"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />


    <ListView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_picture_main"
        android:id="@+id/sounds_list_view">
    </ListView>

    <TextView
        android:textSize="25dp"
        android:textStyle="italic"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:id="@+id/profile_username_main"
        android:paddingLeft="25dp"
        android:layout_alignParentTop="true"
        android:paddingBottom="10dp"
        android:layout_toEndOf="@+id/profile_picture_main" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/friends"
        android:paddingStart="25dp"
        android:layout_marginTop="12dp"
        android:id="@+id/friends_text_main"
        android:layout_below="@+id/profile_username_main"
        android:layout_alignStart="@+id/profile_username_main" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="25dp"
        android:text="@string/add_sound"
        android:layout_marginTop="12dp"
        android:paddingBottom="10dp"
        android:id="@+id/profile_add_text_main"
        android:layout_below="@+id/friends_text_main"
        android:layout_toEndOf="@+id/profile_picture_main" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_sounds"
        android:id="@+id/no_sounds_text"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
